--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ LOG_LEVEL=DEBUG
 # Configuration des timeouts
 REQUEST_TIMEOUT=30
 MAX_RETRIES=3
-
+# Other configurations
+ENVIRONMENT=development 
 # Configuration du modèle
 MISTRAL_MODEL=pixtral-12b-2409
 MAX_TOKENS=131072
