--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 ocr-nanonets-wrapper
-pandas
-fuzzywuzzy
-streamlit
+pandas>=2.0.0
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.20.0
+streamlit>=1.22.0
 requests==2.31.0
 python-dotenv==1.0.1
 numpy>=1.24.0
 pillow>=10.0.0
 mistralai==0.0.10
 python-dateutil==2.8.2 
-scikit-learn
-dotenv
+scikit-learn>=1.2.0
 matplotlib>=3.7.0
 seaborn>=0.12.2
+plotly>=5.14.0
+openpyxl>=3.1.0
